--- a/aboly.html
+++ b/aboly.html
@@ -569,7 +569,7 @@ img.characterimg {
 <p>这句话讲全了是：人不知我，而我不愠。文言文中，尤其是较古的篇章，常会省略、变换主语或宾语，需要读者根据上下文自行补全。适应性练习：<a href="#2.9" class="lyref">2.9</a> <a href="#6.5" class="lyref">6.5</a> <a href="#10.3" class="lyref">10.3</a> <a href="#13.1" class="lyref">13.1</a> </p>
 </li>
 <li>
-<p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚才能卓越的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，类似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以参考后面<a href="#ren2">仁</a>的解释。<span class="lyseealso"><span>【参】</span><span><a href="#15.18" class="lyref">15.18</a> 。《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
+<p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚才能出众的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，类似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以参考后面<a href="#ren2">仁</a>的解释。<span class="lyseealso"><span>【参】</span><span><a href="#15.18" class="lyref">15.18</a> 。《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
 <p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的实际情况。不少古画，比如明代的<a href="http://www.yupoo.com/photos/bluebeard/53885864/" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span></p>
 <p><a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予“君子”的新内涵。孔子创建的<a href="#wenhuaxiayi">私学</a>，开辟了平民通往君子之路。说、乐与君子并列，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
 </li>
@@ -1826,7 +1826,7 @@ img.characterimg {
 </div>
 <div class="lyblobannotation">
 <ul class="lyblobitemize"><li><p><span class="lyterm">瑚</span>和<span class="lyterm">琏</span>（<span class="lypinyin">liǎn</span>）都是古代<a href="#zongmiao">宗庙</a>中盛<a href="#wugu">五谷</a>的礼器。<span class="lyterm">瑚琏</span>比喻善于治国理政、庙堂之上的<a href="#qi4">人才</a>。</p></li></ul>
-<p>以子贡之贤能，尚被评为<a href="#qi4">器</a>，可见<a href="#junzi">君子</a>之难能可贵，也可见孔子对弟子的期望之高。<span class="lyseealso"><span>【参】</span><span><a href="#3.22" class="lyref">3.22</a> <span class="lyq">管仲之器</span>，<a href="#13.20" class="lyref">13.20</a> <span class="lyq">斗筲之徒</span>。清初陆陇其《松阳讲义》：<span class="lyq">大抵天下人才最怕是无用。不但庸陋而无用，有一种极聪明、极有学问的人，却一些用也没有。如世间许多记诵词章、虚无寂灭之辈，他天资尽好，费尽一生心力，只做成一个无用之人。故这一个“器”字亦是最难得的。人到了“器”的地位，便是天地间一个有用之人了。</span></span></span></p>
+<p>以子贡之贤能，尚被评为<a href="#qi4">器</a>，可见<a href="#junzi">君子</a>之可贵，也可见孔子对弟子的期望之高。<span class="lyseealso"><span>【参】</span><span><a href="#3.22" class="lyref">3.22</a> <span class="lyq">管仲之器</span>，<a href="#13.20" class="lyref">13.20</a> <span class="lyq">斗筲之徒</span>。清初陆陇其《松阳讲义》：<span class="lyq">大抵天下人才最怕是无用。不但庸陋而无用，有一种极聪明、极有学问的人，却一些用也没有。如世间许多记诵词章、虚无寂灭之辈，他天资尽好，费尽一生心力，只做成一个无用之人。故这一个“器”字亦是最难得的。人到了“器”的地位，便是天地间一个有用之人了。</span></span></span></p>
 </div>
 </div>
 <a id="5.5"></a><div class="lyblob">
@@ -1836,12 +1836,12 @@ img.characterimg {
 <p>子曰：“焉用佞？御人以口给，屡憎于人。不知其仁，焉用佞？”</p>
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="ning4"></a><span class="lyterm">佞</span>（<span class="lypinyin">nìng</span>）：有口才，能言善辩。“佞人”是善于花言巧语、阿谀奉承的人，“不佞”用于谦称自己（这里佞泛指才能）。<span class="lyseealso"><span>【参】</span><span>东汉王充《论衡·答佞》：<span class="lyq">诸非皆恶。恶中之逆者，谓之无道；恶中之<a href="#qiao3">巧</a>者，谓之佞人。</span></span></span></p></li>
-<li><p><span class="lyterm"><a href="#yu4b">御</a></span>：约束以为己用，即统治，管理。<span class="lyexample"><span>【例】</span><span>成语“以简御繁”。</span></span></p></li>
+<li><p><a id="ning4"></a><span class="lyterm">佞</span>（<span class="lypinyin">nìng</span>）：有口才，能言善辩。“佞人”是善于花言巧语、阿谀奉承的人，“不佞”用于谦称自己（这里佞泛指才能）。<span class="lyseealso"><span>【参】</span><span>东汉王充《论衡·答佞》：<span class="lyq">恶中之逆者，谓之无道；恶中之<a href="#qiao3">巧</a>者，谓之佞人。</span></span></span></p></li>
+<li><p><span class="lyterm">御</span>：应对，对付，这是从抵挡、对抗的意义引申来的，表现在话术上，就是狡辩、搪塞。后来“<a href="#yu4b">御</a>人”多指管理下级，但与这里的上下文不符。</p></li>
 <li><p><span class="lyterm">口给</span>（<span class="lypinyin">jǐ</span>）：口齿伶俐，能说会道。<span class="lyterm">给</span>：充足。<span class="lyexample"><span>【例】</span><span>成语“家给人足”。</span></span></p></li>
 <li>
-<p><span class="lyterm">不知其仁，焉用佞？</span>：不知道他算不算仁，可为什么要有口才（才算好）呢？<a href="#4.24">行重于言</a>是孔子的一贯主张。</p>
-<p><span class="lyterm">不知</span>在这里表示让步，有“且不说”的意味。这也是孔子委婉表示否定的常用句式，可以比较 <a href="#4.6" class="lyref">4.6</a>  的<a href="#weijian">未见</a>。<span class="lyexample"><span>【例】</span><span><a href="#5.8" class="lyref">5.8</a> <a href="#5.19" class="lyref">5.19</a> <a href="#14.1" class="lyref">14.1</a> </span></span></p>
+<p><span class="lyterm">不知其仁，焉用佞？</span>：不清楚他能否称得上仁，可为什么要有口才（才行）呢？<a href="#4.24">行重于言</a>是孔子的一贯主张。</p>
+<p><span class="lyterm">不知</span>是孔子委婉表示否定的常用措辞，也就是说冉雍还未达到仁的境界。可以参照 <a href="#4.6" class="lyref">4.6</a> <span class="lyq">我未见力不足者</span>，<a href="#5.8" class="lyref">5.8</a> <span class="lyq">可使治其赋也，不知其仁也</span>，<a href="#5.19" class="lyref">5.19</a> <span class="lyq">未知，焉得仁？</span><a href="#14.1" class="lyref">14.1</a> <span class="lyq">可以为难矣，仁则吾不知也。</span>带上后面的反问句，就有了让步的意味，近似于“且不说”。</p>
 </li>
 </ul></div>
 </div>
@@ -2298,9 +2298,9 @@ img.characterimg {
 </li>
 <li>
 <p><span class="lyterm">野</span>：质朴率性，也含有粗鄙不懂规矩的意味。<span class="lyseealso"><span>【参】</span><span><a href="#13.3" class="lyref">13.3</a> <span class="lyq">野哉，由也！</span></span></span></p>
-<p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰，近似于现代口语的穷讲究、拿劲、矫情。<span class="lyseealso"><span>【参】</span><span>《仪礼·聘礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span></span></span></p>
+<p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰。这个意义来自古代祝史（祭祀官）祝辞的繁于文采，<span class="lyq">务博记、尚文辞</span>（北宋张耒（<span class="lypinyin">lěi</span>）），<span class="lyq">知其文而不知其文之实</span>（明代王衡《四书驳异》），近似于现代口语的穷讲究、拿劲、矫情。<span class="lyseealso"><span>【参】</span><span>《仪礼·聘礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span></span></span></p>
 </li>
-<li><p><span class="lyterm">彬</span>：荟萃，美盛，这里指文质合宜，相得益彰。成语“文质彬彬”形容人文雅有教养的样子。<span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》25:11：<span class="lyqe">A word fitly spoken is like apples of gold in pictures of silver.</span>（<span class="lyq">一句话说得合宜，就如金苹果在银网子里。</span>）</span></span></p></li>
+<li><p><span class="lyterm">彬</span>（<span class="lypinyin">bīn</span>）：荟萃，美盛，这里指文质合宜，相得益彰。成语“文质彬彬”形容人文雅有教养的样子。<span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》25:11：<span class="lyqe">A word fitly spoken is like apples of gold in pictures of silver.</span>（<span class="lyq">一句话说得合宜，就如金苹果在银网子里。</span>）</span></span></p></li>
 </ul></div>
 </div>
 <a id="6.19"></a><div class="lyblob">
@@ -3677,13 +3677,13 @@ img.characterimg {
 <div class="lybloboriginaltext"><p>色斯举矣，翔而后集。曰：“山梁雌雉，时哉时哉！”<a href="#zilu">子路</a>共之。三嗅而作。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
 <li>
-<p><span class="lyterm">色斯举矣，翔而后集</span>。本章疑有脱漏，难以确解。这个场景大概是，孔子和学生们经过一座山，看到一群<span class="lyterm">雉</span>（<span class="lypinyin">zhì</span>，野山鸡），孔子刚动了动表情没等说话，它们就敏感地飞上天，盘旋了一会才停聚到远处的山脊。<span class="lyterm">斯</span>：无意义的衬字。</p>
+<p><span class="lyterm">色斯举矣，翔而后集</span>。本章疑有脱漏，难以确解。场景大概是，孔子和学生们经过一座山，看到一群<span class="lyterm">雉</span>（<span class="lypinyin">zhì</span>，野山鸡），孔子刚动了动表情没等说话，它们就敏感地飞上天，盘旋了一会才停聚到远处的山脊。<span class="lyterm">斯</span>：无意义的衬字。</p>
 <p><span class="lyseealso"><span>【参】</span><span>《论语注疏》解释为：<span class="lyq">见颜色不善则去之……回翔<a href="#shen3">审</a>观而后下止。</span>《四书集注》进一步说：<span class="lyq">人之见<a href="#ji1b">几</a>而作，审择所处，亦当如此。</span>《韩诗外传》卷二第21章，引用这句话来评价<a href="#jieyu">接舆</a>之妻的敏锐。天下无道，接舆躬耕以食，楚王派使者重金聘他为官，接舆笑而不应。其妻从市集回来后问：<span class="lyq">先生少而为义，岂将老而遗之哉？门外车轶何其深也？</span>（轶（<span class="lypinyin">zhé</span>）：通“辙”，车轮印。）于是一起隐居避世。<span class="lyq">《论语》曰：“色斯举矣，翔而后集。”接舆之妻是也。</span></span></span></p>
 <p>后来，“色斯”就代指离去、隐遁。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·崔琰（<span class="lypinyin">yǎn</span>）传》：<span class="lyq">哲人君子，俄有色斯之志。</span>（俄：瞬间，顿时。）</span></span>“翔而后集”形容名人贤士的动向招来众多追随者，又指学问上博览详察，综合采纳。<span class="lyexample"><span>【例】</span><span>《三国志·魏书·和洽传》裴松之注引《汝南先贤传》说，东汉末年名士许劭屡征不就，<span class="lyq">避乱江南，所历之国，必翔而后集。</span>唐代杜淹《文中子世家》载，文中子王通之父曾教诲他：<span class="lyq">“自天子至庶人，未有不<a href="#zi1a">资</a>友而成者也。……小子勉旃，翔而后集。”</span>于是王通求学四方，<span class="lyq">不解衣者六岁，其精志如此。</span>（旃（<span class="lypinyin">zhān</span>）：之，焉。）</span></span></p>
 <p><a id="jiandu"></a>从周朝到东汉发明造纸术以前，古代书籍多是将文字竖刻在竹片或木片上，再用线绳或牛皮绳横联起来，称为<span class="lykeyword">简牍</span>。由于制作保管不易，篇章首尾容易产生错乱混杂，相似的情况还有 <a href="#16.12" class="lyref">16.12</a> <a href="#16.14" class="lyref">16.14</a> <a href="#20.1" class="lyref">20.1</a> 。</p>
 </li>
 <li><p><span class="lyterm">时哉时哉</span>的感慨，可能是孔子自叹不遇其时，或者无法与世推移。<span class="lyseealso"><span>【参】</span><span><a href="#14.3" class="lyref">14.3</a> <a href="#16.11" class="lyref">16.11</a> </span></span></p></li>
-<li><p><span class="lyterm">共</span>（<span class="lypinyin">gǒng</span>）：通“拱”，拱手。也有说通“供”，指拿食物给它们吃，但结合第一句看似难说通。《吕氏春秋·季秋纪·审己》开头有<span class="lyq">子路掩雉而复释之</span>（掩：突袭式捕捉）的记载，或许和本章的情节有关。</p></li>
+<li><p><span class="lyterm">共</span>（<span class="lypinyin">gǒng</span>）：通“拱”，拱手。也有说通“供”，指拿食物给它们吃，但结合第一句看似难说通。《吕氏春秋·季秋纪·审己》开头有<span class="lyq">子路掩雉而复释之</span>（掩：突袭式捕捉）的记载，或许和本章情节有关。</p></li>
 <li><p><span class="lyterm">三嗅而作</span>：也许是这些野山鸡闻了几下，又飞起来了。闻的是什么已不可考，但不难意会野生动物特有的警惕性。也有认为“嗅”应为“嘎”，即鸟鸣。又有根据扬雄《法言·五百》（“五臣注本”）中“雉噫”一语，认为“嗅”应作<a href="#yi1a">噫</a>，推测本章发生在<a href="#qirenkuinvyue">齐人归女乐</a>之后，孔子离开鲁国的途中，看到雌雉触动了心事，再三叹息之后站起身来。然而更早的“李轨注本”无“雉”字。</p></li>
 </ul></div>
 </div>
@@ -6019,6 +6019,7 @@ img.characterimg {
 <li><p><span class="lyterm"><a href="#he4a">荷</a>蓧</span>（<span class="lypinyin">hè diào</span>）：挑着蓧。<span class="lyterm">蓧</span>：除草用的工具。</p></li>
 <li><p><span class="lyterm">四体不勤，五谷不分</span>：四肢不勤快，五谷分不清，这是讥讽孔子轻视体力劳动，只关心治国教民的高级问题。<span class="lyseealso"><span>【参】</span><span><a href="#13.4" class="lyref">13.4</a> 。</span></span>这句话在现代常用于形容人（如书呆子、娇生惯养的孩子）脱离生产实践，缺乏生活常识。<a id="wugu"></a><span class="lyterm">五谷</span>包括：稻（或麻）、黍（<span class="lypinyin">shǔ</span>，黄米）、稷（<span class="lypinyin">jì</span>，小米）、麦、菽（<span class="lypinyin">shū</span>，大豆）。</p></li>
 <li><p><span class="lyterm">植其杖而芸</span>：把手杖插在地上，除草去了。<span class="lyterm">芸</span>：通“耘”，除草。</p></li>
+<li><p><span class="lyterm">食（<span class="lypinyin">sì</span>）之</span>：给他（子路）吃。<span class="lyterm">食</span>：给（人或动物）饭吃，后来加声旁“司”写作“饲”。主动的吃东西读 <span class="lypinyin">shí</span>。比较：<a href="#10.9" class="lyref">10.9</a> <span class="lyq">出三日不食之矣。</span></p></li>
 <li><p><span class="lyterm">至则行矣</span>：子路至，则丈人已行矣。</p></li>
 <li><p><a id="jie2"></a><span class="lyterm">节</span>：法度，法则，又引申为操守。<span class="lyexample"><span>【例】</span><span>《礼记·曲礼上》：<span class="lyq">礼不逾节，不侵侮，不好狎。</span>成语“高风亮节”。</span></span><span class="lyseealso"><span>【参】</span><span>据《四书集注》，“不仕无义”及之后的话，可能是孔子说的：<span class="lyq">福州有国初时写本，“路”下有“反子”二字，以此为子路反，而夫子言之也，未知是否。</span></span></span></p></li>
 <li><p><span class="lyterm">大伦</span>：指<a href="#junchenfuzi">君臣父子</a>的正统关系。<a id="lun2"></a><span class="lyterm">伦</span>：尊卑长幼的次序关系，泛指道理，义理。<span class="lyexample"><span>【例】</span><span>现代汉语也常用的“天伦”，就是父子、兄弟这样天然形成的亲属关系。</span></span><span class="lyseealso"><span>【参】</span><span>《礼记·礼器》：<span class="lyq">天地之祭，宗庙之事，父子之道，君臣之义，伦也。</span></span></span></p></li>
@@ -6194,7 +6195,7 @@ img.characterimg {
 <a id="19.14"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.14">19.14</a></div>
 <div class="lybloboriginaltext"><p><a href="#ziyou">子游</a>曰：“丧致乎哀而止。”</p></div>
-<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#3.4" class="lyref">3.4</a> </span></span></p></div>
+<div class="lyblobannotation"><p><span class="lyseealso"><span>【参】</span><span><a href="#3.4" class="lyref">3.4</a> <span class="lyq">丧，与其易也，宁戚。</span></span></span></p></div>
 </div>
 <a id="19.15"></a><div class="lyblob">
 <div class="lyblobtag"><a href="ly#19.15">19.15</a></div>
@@ -6647,6 +6648,7 @@ img.characterimg {
 <p><span class="lybook">《论语通译》</span>（修订版），徐志刚译注，人民文学出版社，语文新课标必读丛书，2006年。发行量较大，简明清通，但似乎过于简化，疏漏略多。</p>
 <p><a id="lunyuzhushu"></a><span class="lybook">《论语注疏》</span>，〔魏〕何晏等集解，〔梁〕皇侃义疏，〔北宋〕邢昺正义，梁运华整理，山东画报出版社，四库家藏丛书，2004年。儒家“十三经注疏”之一，汉唐经学的总结，朱熹《四书集注》之前的通行注本。书前“提要”介绍：<span class="lyq">三国时，魏何晏等五人集孔安国、包咸、周氏、马融、郑玄、陈群、王肃和周生烈等对《论语》的解说，择善而从，成《论语集解》。梁皇侃对《集解》进行疏解，成《论语义疏》。宋咸平二年（公元999年），邢昺遵诏改定皇侃《义疏》，其删繁就简，增加对义理的阐述，终成《论语正义》二十卷，又名《论语注疏》。</span>因清儒刘宝楠也有《论语正义》，为清代经学之结晶，故本书多称《论语集解》或《论语注疏》。</p>
 <p><span class="lybook">《四书集注》</span>，〔南宋〕朱熹集注，陈戍国标点，岳麓书社，2004年。</p>
+<p><span class="lybook">《诸子集成（第一册）：论语正义·孟子正义》</span>，〔清〕刘宝楠、刘恭冕、焦循撰，北京燕山出版社，2008年。</p>
 <p><a id="lunyujishi"></a><span class="lybook">《论语集释》</span>，程树德撰，中华书局，中华国学文库，2013年。本书可称《论语》注解大全，分类集成了从汉至清各家学者的研究心得，引书680种，并加按语，方便后人系统了解各种诠释与引申，至可感佩。或有讥为取舍不尽精当，敢问更精者何在？其《自序》称：<span class="lyq">夫文化者国家之生命，思想者人民之倾向，教育者立国之根本，凡爱其国者，未有不爱其国之文化。</span>可与钱穆先生《国史大纲》开篇的“凡读本书请先具下列诸信念”对读。</p>
 <p><span class="lybook">《唐写本论语郑氏注及其研究》</span>，王素编著，文物出版社，1991年。</p>
 <p><span class="lybooke">Analects: With Selections from Traditional Commentaries</span>, Edward Slingerland（森舸澜）, Hackett Publishing Co., Hackett Classics, 2010.</p>
