--- a/aboly.html
+++ b/aboly.html
@@ -1836,8 +1836,11 @@ img.characterimg {
 <p>子曰：“焉用佞？御人以口给，屡憎于人。不知其仁，焉用佞？”</p>
 </div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="ning4"></a><span class="lyterm">佞</span>（<span class="lypinyin">nìng</span>）：有口才，能言善辩。“佞人”是善于花言巧语、阿谀奉承的人，“不佞”用于谦称自己（这里佞泛指才能）。<span class="lyseealso"><span>【参】</span><span>东汉王充《论衡·答佞》：<span class="lyq">恶中之逆者，谓之无道；恶中之<a href="#qiao3">巧</a>者，谓之佞人。</span></span></span></p></li>
-<li><p><span class="lyterm">御</span>：应对，对付，这是从抵挡、对抗的意义引申来的，表现在话术上，就是狡辩、搪塞。后来“<a href="#yu4b">御</a>人”多指管理下级，但与这里的上下文不符。</p></li>
+<li><p><a id="ning4"></a><span class="lyterm">佞</span>（<span class="lypinyin">nìng</span>）：有口才，能言善辩。“佞人”是善于花言巧语、阿谀奉承的人，“不佞”用于谦称自己（佞泛指才能）。<span class="lyseealso"><span>【参】</span><span>东汉王充《论衡·答佞》：<span class="lyq">恶中之逆者，谓之无道；恶中之<a href="#qiao3">巧</a>者，谓之佞人。</span></span></span></p></li>
+<li>
+<p><span class="lyterm">御</span>：应对，对付，这是从抵挡、对抗的意义引申来的，表现在话术上，就是狡辩、搪塞。</p>
+<p>后来，“<a href="#yu4b">御</a>人”多指管理下级，但与本章上下文不符。<span class="lyexample"><span>【例】</span><span>《旧五代史·周书·太祖本纪》，周太祖郭威自称<span class="lyq">究为君治国之源，审修己御人之要。</span></span></span></p>
+</li>
 <li><p><span class="lyterm">口给</span>（<span class="lypinyin">jǐ</span>）：口齿伶俐，能说会道。<span class="lyterm">给</span>：充足。<span class="lyexample"><span>【例】</span><span>成语“家给人足”。</span></span></p></li>
 <li>
 <p><span class="lyterm">不知其仁，焉用佞？</span>：不清楚他能否称得上仁，可为什么要有口才（才行）呢？<a href="#4.24">行重于言</a>是孔子的一贯主张。</p>
@@ -1849,8 +1852,8 @@ img.characterimg {
 <div class="lyblobtag"><a href="ly#5.6">5.6</a></div>
 <div class="lybloboriginaltext"><p>子使<a href="#qidiaokai">漆雕开</a>仕，对曰：“吾斯之未能信。”子说。</p></div>
 <div class="lyblobannotation"><ul class="lyblobitemize">
-<li><p><a id="shi4a"></a><span class="lyterm">仕</span>：做官，从政。也可作名词，官职。<span class="lyexample"><span>【例】</span><span>《北史·徐招传》：<span class="lyq">初入洛阳，虽未登仕，已为时知。</span>“仕途”即官位升迁之路。</span></span></p></li>
-<li><p><span class="lyterm">吾斯之未能信</span>：“<a href="#ozhiv">O之V</a>”的倒装结构。<span class="lyterm">斯</span>指仕，<span class="lyterm">信</span>指有自信。</p></li>
+<li><p><a id="shi4a"></a><span class="lyterm">仕</span>：做官，从政。也可作名词，官职。<span class="lyexample"><span>【例】</span><span>《北史·徐招传》：<span class="lyq">初入洛阳，虽未登仕，已为时知。</span>“仕途”即做官从政之路。</span></span></p></li>
+<li><p><span class="lyterm">吾斯之未能信</span>：“<a href="#ozhiv">O之V</a>”的倒装结构，<span class="lyterm">斯</span>指仕，<span class="lyterm">信</span>指有自信。</p></li>
 </ul></div>
 </div>
 <a id="5.7"></a><div class="lyblob">
