--- a/aboly.html
+++ b/aboly.html
@@ -570,7 +570,7 @@ img.characterimg {
 </li>
 <li>
 <p><a id="junzi"></a><span class="lyterm">君子</span>：道德高尚才能出众的人，与“小人”相对。在古汉语中，这两个词含有强烈的褒贬，成为善与恶、受尊崇与被唾弃的通用代称，类似于现代口语的好人、坏蛋。孔子所认可的君子，具有丰富的内涵，需要通过后文不断加深理解。这里是说，“人不知而不愠”属于君子之风，而非等同于君子，可以参考后面<a href="#ren2">仁</a>的解释。<span class="lyseealso"><span>【参】</span><span><a href="#15.18" class="lyref">15.18</a> 。《礼记·曲礼上》：<span class="lyq">博闻强<a href="#zhi4c">识</a>而让，敦善行而不怠，谓之君子。</span>（敦：勤勉。）</span></span></p>
-<p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的实际情况。不少古画，比如明代的<a href="http://www.yupoo.com/photos/bluebeard/53885864/" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span></p>
+<p><a id="daren"></a>“君子”最早见于《<a href="#shangshu">尚书</a>》的《虞夏书·大禹谟》（伪）、《周书·酒诰》等篇，用来称呼<a href="#qingdafushi">大夫</a>及以上的贵族官员，暗含对他们地位高、入<a href="#wenhuaxiayi">官学</a>、有文化的赞美。字面上看，“<a href="#jun1">君</a>之子”出身高贵，天生是要成为人上人的。后来，君子就成为有官职或地位高者的通称，相当于古装剧里的大人、老爷、贵人。相对的也叫小人，或称<a href="#yeren">野人</a>，也就是<a href="#shu4b">庶民</a>，平民百姓。这个用法并没有品性上的褒贬，只表达阶层高低、地位主从的实际情况。不少古画，比如明代的<a href="http://www.yupoo.com/photos/bluebeard/53885864/" class="lyurl" target="_blank">江舜夫官服图</a>，常会把仆从画得不成比例的小，从中可以体会君子、小人的这种含义。<span class="lyexample"><span>【例】</span><span><a href="#4.11" class="lyref">4.11</a> <span class="lyq">君子怀德，小人怀土。</span>《<a href="#shijing">诗经</a>·魏风·伐檀》：<span class="lyq">彼君子兮，不素餐兮！</span></span></span><span class="lyseealso"><span>【参】</span><span>清代刘宝楠《论语正义》：<span class="lyq">非有位而称君子者，以其人有道德，可任在位也。</span></span></span></p>
 <p><a id="junzizhilu"></a>不凭出身高低而论道德品行，是孔子那个时代赋予“君子”的新内涵。孔子创建的<a href="#wenhuaxiayi">私学</a>，开辟了平民通往君子之路。说、乐与君子并列，也说明<a href="#sidao">斯道</a>并不遥远乏味。</p>
 </li>
 </ul></div>
@@ -2303,7 +2303,7 @@ img.characterimg {
 <p><span class="lyterm">野</span>：质朴率性，也含有粗鄙不懂规矩的意味。<span class="lyseealso"><span>【参】</span><span><a href="#13.3" class="lyref">13.3</a> <span class="lyq">野哉，由也！</span></span></span></p>
 <p><a id="shi3b"></a><span class="lyterm">史</span>：文辞繁复，引申为浮夸虚饰。这个意义来自古代祝史（祭祀官）祝辞的繁于文采，<span class="lyq">务博记、尚文辞</span>（北宋张耒（<span class="lypinyin">lěi</span>）），<span class="lyq">知其文而不知其文之实</span>（明代王衡《四书驳异》），近似于现代口语的穷讲究、拿劲、矫情。<span class="lyseealso"><span>【参】</span><span>《仪礼·聘礼》：<span class="lyq">辞无常，<a href="#xun4">孙</a>而说。辞多则史，少则不达。辞苟足以达，义之至也。</span></span></span></p>
 </li>
-<li><p><span class="lyterm">彬</span>（<span class="lypinyin">bīn</span>）：荟萃，美盛，这里指文质合宜，相得益彰。成语“文质彬彬”形容人文雅有教养的样子。<span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》25:11：<span class="lyqe">A word fitly spoken is like apples of gold in pictures of silver.</span>（<span class="lyq">一句话说得合宜，就如金苹果在银网子里。</span>）</span></span></p></li>
+<li><p><span class="lyterm">彬</span>（<span class="lypinyin">bīn</span>）：文质合宜，相得益彰。其字形从林从彡（<span class="lypinyin">shān</span>，文采），表示文采盛美。成语“文质彬彬”形容人文雅有教养的样子。<span class="lyseealso"><span>【参】</span><span>《圣经·旧约·箴言》25:11：<span class="lyqe">A word fitly spoken is like apples of gold in pictures of silver.</span>（<span class="lyq">一句话说得合宜，就如金苹果在银网子里。</span>）</span></span></p></li>
 </ul></div>
 </div>
 <a id="6.19"></a><div class="lyblob">
@@ -4836,6 +4836,10 @@ img.characterimg {
 <p><span class="lyseealso"><span>【参】</span><span>《史记·六国年表》：<span class="lyq">及田常杀简公而相齐国，诸侯晏然弗讨，海内争于战功矣。<a href="#sanjiafenjin">三国</a>终之卒分晋，田和亦灭齐而有之，六国之盛自此始。务在强兵并敌，谋诈用而<a href="#zonghengjia">从横</a>短长之说起。</span>（晏：安定。）<a id="quqie"></a>《庄子·胠箧》：<span class="lyq">田成子有乎盗贼之名，而身处尧舜之安，小国不敢非，大国不敢诛，十二世有齐国。……彼窃钩者诛，窃国者为诸侯，诸侯之门而仁义存焉。</span>（胠（<span class="lypinyin">qū</span>）：从旁撬开。箧（<span class="lypinyin">qiè</span>）：小箱。尧舜之安是讽刺话。末句是说，身为诸侯自会有仁义之名。）</span></span></p>
 </li>
 <li>
+<p><span class="lyterm">讨</span>：出兵攻打，讨伐。其本义为用言语训治，所以侧重于先历数罪状（声讨）然后攻打。</p>
+<p>相应地，<a href="#16.1" class="lyref">16.1</a>  的<span class="lykeyword">伐</span>，侧重于大张旗鼓地攻击。<span class="lyseealso"><span>【参】</span><span>《左传·庄公二十九年》：<span class="lyq">凡师，有钟鼓曰“伐”，无曰“侵”，轻曰“袭”。</span></span></span></p>
+</li>
+<li>
 <p><span class="lyterm">“告<a href="#fu2b">夫</a>三子”者</span>。<a id="sanzi"></a><span class="lyterm">三子</span>指<a href="#sanhuan">三桓</a>的宗主，他们是当时鲁国真正的掌权人物。<span class="lyterm">者</span>：句末语气词，可以表示感叹、祈使、反问、推测等。这句话包含了孔子愤激的心情。<span class="lyexample"><span>【例】</span><span>《史记·项羽本纪》：<span class="lyq">富贵不归故乡，如衣绣夜行，谁知之者！</span></span></span></p>
 <p>弱鲁难讨强齐，孔子出于大义不得不告，并认为未必不堪一战：<span class="lyq">陈恒弑其君，民之不<a href="#yu3a">与</a>者半。以鲁之众，加齐之半，可克也。</span>（《左传·哀公十四年》。）但按孔子的主张，三桓是讨不到实利的，且也早有不臣之心，当然会置若罔闻了。</p>
 <p>终孔子一生，齐国变乱迭起，经历<a href="#cuizhu">庄</a>、<a href="#qijinggong">景</a>、悼、简、平5任国君和1位被弑的幼君，事见《左传·哀公十四年》、《史记·齐太公世家》、《史记·田敬仲完世家》。中国历来特别<a href="#koushi">忌讳</a>弑上篡权的行为，田恒弑简公与78年之后的<a href="#sanjiafenjin">三家分晋</a>遥相呼应，不仅是典型的以下犯上，而且得到当时周天子的容忍甚至承认，象征着主流价值观与社会秩序的大变动。同年春，鲁人西狩获麟，《春秋》绝笔，2年后孔子就去世了。</p>
@@ -5428,19 +5432,19 @@ img.characterimg {
 <li><p><span class="lyterm">颛臾</span>（<span class="lypinyin">zhuān yú</span>）：鲁国境内的一个<a href="#fuyong">附庸国</a>，位于季氏的封邑<a href="#feiyi">费邑</a>西北约80里，相传为<a href="#sanhuang">伏羲</a>的后代所建。周初受<a href="#chengwang">成王</a>封，负责主持祭祀蒙山（位于鲁国境内偏东，与颛臾相邻），即为<span class="lyterm">东蒙主</span>。本章的情节应发生在孔子<a href="#jikangzi">返鲁</a>之后。这次军事活动未见于现存史料，不知是不是孔子的劝阻起了效果。</p></li>
 <li><p><a id="youshi"></a><span class="lyterm">有事</span>：有国家大事，这里指发动战争。<a id="shi4d"></a><span class="lyterm">事</span>：特指天子、诸侯层面的祭祀、会盟、战争等重大举措，action。<span class="lyexample"><span>【例】</span><span>《谷梁传·隐公十一年》：<span class="lyq">天子无事，诸侯相朝，正也。</span>东晋范宁注：<span class="lyq">事谓巡守、崩葬、兵<a href="#sheng4a">革</a>之事。</span></span></span></p></li>
 <li>
-<p><span class="lyterm"><a href="#wunai">无乃</a>尔<a href="#shi4">是</a>过与？</span>：难道不该怪罪你吗？当时冉求和子路都是季氏家臣，冉求曾为之<a href="#11.17">聚敛而附益</a>，应该已很受重用了。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">夫子所以深罪之，为其瘠鲁以肥<a href="#sanhuan">三家</a>也。</span></span></span></p>
+<p><span class="lyterm"><a href="#wunai">无乃</a>尔<a href="#shi4">是</a>过<a href="#yu2">与</a>？</span>：难道不该怪罪你吗？当时冉求和子路都是季氏家臣，冉求曾为之<a href="#11.17">聚敛而附益</a>，应该已很受重用了。<span class="lyseealso"><span>【参】</span><span>《四书集注》转引二程弟子谢良佐语：<span class="lyq">夫子所以深罪之，为其瘠鲁以肥<a href="#sanhuan">三家</a>也。</span>思考：季氏将伐颛臾，<a href="#14.21" class="lyref">14.21</a>  三家不讨陈恒，仅仅是欺软怕硬吗？</span></span></p>
 <p>冉求、子路同以政事闻名 <a href="#11.3" class="lyref">11.3</a> ，他们一起出现的章还有 <a href="#5.8" class="lyref">5.8</a> <a href="#6.8" class="lyref">6.8</a> <a href="#11.13" class="lyref">11.13</a> <a href="#11.22" class="lyref">11.22</a> <a href="#11.24" class="lyref">11.24</a> <a href="#11.26" class="lyref">11.26</a> <a href="#14.12" class="lyref">14.12</a> 。</p>
 </li>
 <li><p><span class="lyterm">夫子</span>：指季氏宗主<a href="#jikangzi">季康子</a>。</p></li>
 <li>
-<p><span class="lyterm">周任有言曰：“陈力就列，不能者止。”</span><span class="lyterm">周任</span>：古注说他是“古之良史”，但事迹不详。<span class="lyseealso"><span>【参】</span><span>《左传》有2处引用了周任的话。隐公六年：<span class="lyq">为国家者，见恶如农夫之务去草焉，芟夷蕰崇之，绝其本根，勿使能殖，则善者信矣。</span>（芟（<span class="lypinyin">shān</span>）：除草。<a id="yi2"></a>夷：平，铲除。蕰（<span class="lypinyin">yùn</span>）：通“蕴”，积聚。）昭公五年：<span class="lyq">为政者不赏私劳，不罚私怨。</span></span></span></p>
+<p><span class="lyterm">周任有言曰：“陈力就列，不能者止。”</span><span class="lyterm">周任</span>：古注说他是“古之良史”，但事迹不详。<span class="lyseealso"><span>【参】</span><span>《左传》有2处引用了周任的话。隐公六年：<span class="lyq">为国家者，见恶如农夫之务去草焉，芟夷蕰崇之，绝其本根，勿使能殖，则善者信矣。</span>（芟（<span class="lypinyin">shān</span>）：除草。<a id="yi2"></a>夷：平，铲除。蕰（<span class="lypinyin">yùn</span>）：通“蕴”，积聚。崇：也是积聚。）昭公五年：<span class="lyq">为政者不赏私劳，不罚私怨。</span></span></span></p>
 <p>他这句话的意思是：拿得出什么本事就去任什么职，做不来就歇着吧。<a id="chen2a"></a><span class="lyterm">陈</span>：摆出，陈列。<span class="lyseealso"><span>【参】</span><span>《史记·范雎蔡泽列传》引范雎上秦昭王书，开头说：<span class="lyq">臣闻明主立政，有功者不得不赏，有能者不得不官。劳大者其禄厚，功多者其爵尊，能治众者其官大。故无能者不敢当职焉，有能者亦不得蔽隐。</span></span></span></p>
 </li>
-<li><p><span class="lyterm">危而不持，<a href="#dian1">颠</a>而不扶</span>。<span class="lyterm">持</span>：扶助，扶持。本句与后面的<span class="lyterm"><a href="#xiang4b">相</a></span>一语双关，责备他们身为臣下而不作为，使主上迷途难返，陷于无相之<a href="#gu3b">瞽</a>的危险境地。<span class="lyseealso"><span>【参】</span><span><a href="#11.24" class="lyref">11.24</a> 。《明史·海瑞传》海瑞上嘉靖疏：<span class="lyq">今大臣持禄而好谀，小臣畏罪而结舌，臣不胜愤恨。</span></span></span></p></li>
+<li><p><span class="lyterm">危而不持，<a href="#dian1">颠</a>而不扶</span>。<span class="lyterm">持</span>：扶助，扶持。本句与后面的<span class="lyterm"><a href="#xiang4b">相</a></span>一语双关，责备他们身为臣下而不作为，使主上迷途难返，陷于无相之<a href="#gu3b">瞽</a>的危险境地。<span class="lyseealso"><span>【参】</span><span><a href="#11.24" class="lyref">11.24</a> <span class="lyq">所谓大臣者，以道事君，不可则止。</span>《明史·海瑞传》海瑞上嘉靖疏：<span class="lyq">今大臣持禄而好谀，小臣畏罪而结舌，臣不胜愤恨。</span></span></span></p></li>
 <li><p><span class="lyterm">虎兕（<span class="lypinyin">sì</span>）出于柙（<span class="lypinyin">xiá</span>），龟玉毁于椟中</span>。<span class="lyterm">兕</span>：野牛。<span class="lyterm">柙</span>：兽笼。<span class="lyterm">龟玉</span>：龟甲和宝玉，古代视为国之重器。这里用“虎兕”隐指季氏的无名之师，“龟玉”指社稷之臣颛臾，批评两位学生未能尽到持危扶颠、进尽忠言的臣辅之职。<span class="lyseealso"><span>【参】</span><span>《四书集注》：<span class="lyq">言在柙而逸，在椟而毁，典守者不得<a href="#ci2a">辞</a>其过。明二子居其位而不去，则季氏之恶，己不得不任其责也。</span>（<a id="dian3"></a>典：掌管，主持。）<a id="ligu"></a>《后汉书·李固传》载，146年，年幼的汉冲帝被皇太后之兄、大将军梁冀毒死，太尉李固联合司徒胡广、司空赵戒，议立年长有德的清河王为帝。梁冀忌惮清河王之严明，执意立15岁的蠡吾侯（即汉桓帝），争论时<span class="lyq">意气凶凶而言辞激切，自胡广、赵戒以下，莫不慑惮之</span>，而李固坚守本议。一年后，李固被梁冀诬陷而死，临刑前写信给胡广、赵戒说：<span class="lyq">“固受国厚恩，是以竭其股肱，不顾死亡，志欲扶持王室，比隆<a href="#hanwendi">文</a>、<a href="#hanxuandi">宣</a>。何图一朝梁氏迷谬，公等曲从，以吉为凶，成事为败乎？汉家衰微，从此始矣！公等受主厚禄，颠而不扶，倾覆大事，后之良史，岂有所私？固身已矣，于义得矣，夫复何言！”广、戒得书悲惭，皆长叹流涕。</span>（<a id="gugong"></a>股<a href="#gong1b">肱</a>：大腿和胳膊，这里指辅佐（之力），也常比喻辅政重臣。）</span></span></p></li>
-<li><p><a id="gu4a"></a><span class="lyterm">固</span>：本义为四周地势险要闭塞，易于长守不变。<span class="lyexample"><span>【例】</span><span>贾谊《过秦论下》：<span class="lyq">秦地被山带河以为固，四塞之国也。</span></span></span></p></li>
+<li><p><a id="gu4a"></a><span class="lyterm">固</span>：防御坚固，其本义为四周地势险要闭塞，易于长守不变。<span class="lyexample"><span>【例】</span><span>贾谊《过秦论下》：<span class="lyq">秦地被山带河以为固，四塞之国也。</span></span></span></p></li>
 <li><p><span class="lyterm">必为之辞</span>：非要替它找借口。<a id="ci2a"></a><span class="lyterm">辞</span>：动词，辩解，申辩，后来又从言语上的抗拒推广到行为上的不接受、开脱。<span class="lyexample"><span>【例】</span><span>《礼记·表记》：<span class="lyq">仁者之过易辞也。</span></span></span></p></li>
-<li><p><span class="lyterm">不患寡而患不均，不患贫而患不安</span>：根据文意，似应为：不患贫而患不均，不患寡而患不安。<span class="lyseealso"><span>【参】</span><span>西汉董仲舒《春秋繁露·度制》开篇：<span class="lyq">孔子曰：“不患贫而患不均。”故有所积重，则有所空虚矣。大富则骄，大贫则忧；忧则为盗，骄则为暴——此众人之情也。</span></span></span></p></li>
+<li><p><span class="lyterm">不患寡而患不均，不患贫而患不安</span>：根据文意，似应为：不患贫而患不均，不患寡而患不安。<a id="gua3a"></a><span class="lyterm">寡</span>：人少，这是其本义。<span class="lyseealso"><span>【参】</span><span>西汉董仲舒《春秋繁露·度制》开篇：<span class="lyq">孔子曰：“不患贫而患不均。”故有所积重，则有所空虚矣。大富则骄，大贫则忧；忧则为盗，骄则为暴——此众人之情也。</span></span></span></p></li>
 <li>
 <p><span class="lyterm">既<a href="#lai2">来</a>之，则安之</span>里的<span class="lyterm">来</span>和<span class="lyterm">安</span>，都是使动用法：使归从，使安定。</p>
 <p><a id="yuanren"></a>两个<span class="lyterm">之</span>都是指<span class="lyterm">远人</span>，与自己关系疏远者。它既可指地理的远近，如海外异邦；也可指立场的亲疏，如敌国外患；又可指文化的同异，如<a href="#yidihuaxia">四夷</a>。如果孔子这里专有所指，也许是说鲁国连年讨伐的近邻<a href="#zhuguo">邾国</a>。</p>
@@ -5577,7 +5581,7 @@ img.characterimg {
 <ul class="lyblobitemize">
 <li><p><span class="lyterm">夫人</span>：《曲礼下》孔颖达疏：<span class="lyq">夫，扶也，言扶持于王也。</span></p></li>
 <li><p><span class="lyterm">小童</span>：国君夫人对自己的谦称。《曲礼下》郑玄注：<span class="lyq">若云未成人也。</span></p></li>
-<li><p><a id="gua3"></a><span class="lyterm">寡</span>：王侯对自己的谦称，一说意为孤独，一说意为少<a href="#de2a">德</a>。<span class="lyterm">寡小君</span>：《曲礼下》孔颖达疏：<span class="lyq">君之妻曰小君，而云寡者，亦从君为谦也。</span><span class="lyseealso"><span>【参】</span><span>《老子·三十九章》：<span class="lyq">贵以贱为本，高以下为基。是以侯王自称孤、寡、不谷。</span></span></span></p></li>
+<li><p><a id="gua3"></a><span class="lyterm"><a href="#gua3a">寡</a></span>：王侯对自己的谦称，一说意为孤独，一说意为少<a href="#de2a">德</a>。<span class="lyterm">寡小君</span>：《曲礼下》孔颖达疏：<span class="lyq">君之妻曰小君，而云寡者，亦从君为谦也。</span><span class="lyseealso"><span>【参】</span><span>《老子·三十九章》：<span class="lyq">贵以贱为本，高以下为基。是以侯王自称孤、寡、不谷。</span></span></span></p></li>
 </ul>
 </div>
 </div>
